--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                              and customer satisfaction, making us the trusted choice for ship owners and crews.
                               Choose us as your dependable partner on the open seas for tailored maritime solutions.</p>
                         
-                        <a href="/about.html" class="btn btn-primary py-3 px-5">Explore More</a>
+                        <a href="about.html" class="btn btn-primary py-3 px-5">Explore More</a>
                     </div>
                 </div>
             </div>
