--- a/blog.html
+++ b/blog.html
@@ -100,8 +100,8 @@
             <h1 class="display-3 text-white mb-3 animated slideInDown">Blog</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="text-white" href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="/about.html">about</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="about.html">about</a></li>
                     <li class="breadcrumb-item text-white active" aria-current="page">Blog</li>
                 </ol>
             </nav>
@@ -124,7 +124,7 @@
                             <img class="img-fluid w-100" src="img/blog.webp" alt="">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog.webp" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                <a class="btn btn-square btn-outline-light mx-1" href="/blog-operations.html"><i class="fa fa-link"></i></a>
+                                <a class="btn btn-square btn-outline-light mx-1" href="blog-operations.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
@@ -139,7 +139,7 @@
                             <img class="img-fluid w-100" src="img/blog2.jpg" alt="">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                <a class="btn btn-square btn-outline-light mx-1" href="/blog-guide.html"><i class="fa fa-link"></i></a>
+                                <a class="btn btn-square btn-outline-light mx-1" href="blog-guide.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
@@ -154,7 +154,7 @@
                             <img class="img-fluid w-100" src="img/blog.webp" alt="">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog.webp" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                <a class="btn btn-square btn-outline-light mx-1" href="/blog-medical.html"><i class="fa fa-link"></i></a>
+                                <a class="btn btn-square btn-outline-light mx-1" href="blog-medical.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
@@ -188,15 +188,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="/service-provision.html">Provisions</a>
-                    <a class="btn btn-link" href="/service-medical.html">Medical Supply</a>
-                    <a class="btn btn-link" href="/service-store.html">Bonded Store</a>
+                    <a class="btn btn-link" href="service-provision.html">Provisions</a>
+                    <a class="btn btn-link" href="service-medical.html">Medical Supply</a>
+                    <a class="btn btn-link" href="service-store.html">Bonded Store</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="/about.html">About Us</a>
-                    <a class="btn btn-link" href="/contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="/service.html">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <!-- <a class="btn btn-link" href="">Terms & Condition</a> -->
                     <!-- <a class="btn btn-link" href="">Support</a> -->
                 </div>
