--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome To</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Ship Chandler Port Walcott</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">YOUR TRUSTED PARTNER FOR SHIP SUPPLIES AND SERVICES IN WESTERN AUSTRALIA</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
+                                <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
                                 <!-- <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a> -->
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome To</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Ship Chandler Port Walcott</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">YOUR TRUSTED PARTNER FOR SHIP SUPPLIES AND SERVICES IN WESTERN AUSTRALIA</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
+                                <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
                                 <!-- <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a> -->
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Ship Chandler Port Walcott</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">YOUR TRUSTED PARTNER FOR SHIP SUPPLIES AND SERVICES IN WESTERN AUSTRALIA</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
+                                <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
                                 <!-- <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a> -->
                             </div>
                         </div>
@@ -242,7 +242,7 @@
                             <h4 class="mb-3">PROVISIONS</h4>
                             <!-- <p>We offer comprehensive maintenance services to enhance ship reliability and minimize downtime.</p> -->
                             
-                            <a class="fw-medium text-primary" href="/service-provision.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                            <a class="fw-medium text-primary" href="service-provision.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                             <h4 class="mb-3">MEDICAL SUPPLY</h4>
                             <!-- <p>Our specialized team sources and delivers top-quality ship equipment to meet your 
                                 vessel's specific needs, ensuring smooth operation and safety.</p> -->
-                            <a class="fw-medium text-primary" href="/service-medical.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                            <a class="fw-medium text-primary" href="service-medical.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                             <h4 class="mb-3">BONDED STORE</h4>
                             <!-- <p>In Walcott, WESTERN AUSTRALIA, we provide a diverse range of ship supplies,
                                  ensuring high-quality provisions and essential items for efficient vessel operations.</p>  -->
-                            <a class="fw-medium text-primary" href="/service-store.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                            <a class="fw-medium text-primary" href="service-store.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -365,7 +365,7 @@
                             <img class="img-fluid w-100" src="img/blog.webp" alt="">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog.webp" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                <a class="btn btn-square btn-outline-light mx-1" href="/blog-operations.html"><i class="fa fa-link"></i></a>
+                                <a class="btn btn-square btn-outline-light mx-1" href="blog-operations.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
@@ -395,7 +395,7 @@
                             <img class="img-fluid w-100" src="img/blog.webp" alt="">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog.webp" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                <a class="btn btn-square btn-outline-light mx-1" href="./blog-medical.html"><i class="fa fa-link"></i></a>
+                                <a class="btn btn-square btn-outline-light mx-1" href="blog-medical.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
@@ -432,16 +432,16 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="/service-provision.html">Provisions</a>
-                    <a class="btn btn-link" href="/service-medical.html">Medical Supply</a>
-                    <a class="btn btn-link" href="/service-store.html">Bonded Store</a>
+                    <a class="btn btn-link" href="service-provision.html">Provisions</a>
+                    <a class="btn btn-link" href="service-medical.html">Medical Supply</a>
+                    <a class="btn btn-link" href="service-store.html">Bonded Store</a>
                     
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="/about.html">About Us</a>
-                    <a class="btn btn-link" href="/contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="/service.html">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <!-- <a class="btn btn-link" href="">Terms & Condition</a> -->
                     <!-- <a class="btn btn-link" href="">Support</a> -->
                 </div>
