--- a/about.html
+++ b/about.html
@@ -211,15 +211,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="/service-provision.html">Provisions</a>
-                    <a class="btn btn-link" href="/service-medical.html">Medical Supply</a>
-                    <a class="btn btn-link" href="/service-store.html">Bonded Store</a>
+                    <a class="btn btn-link" href="service-provision.html">Provisions</a>
+                    <a class="btn btn-link" href="service-medical.html">Medical Supply</a>
+                    <a class="btn btn-link" href="service-store.html">Bonded Store</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="/about.html">About Us</a>
-                    <a class="btn btn-link" href="/contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="/service.html">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <!-- <a class="btn btn-link" href="">Terms & Condition</a> -->
                     <!-- <a class="btn btn-link" href="">Support</a> -->
                 </div>
