--- a/service.html
+++ b/service.html
@@ -100,8 +100,8 @@
             <h1 class="display-3 text-white mb-3 animated slideInDown">Service</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="text-white" href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="/about.html">about</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="about.html">about</a></li>
                     <li class="breadcrumb-item text-white active" aria-current="page">Service</li>
                 </ol>
             </nav>
@@ -136,7 +136,7 @@
                             <h4 class="mb-3">PROVISIONS</h4>
                             <!-- <p>We offer comprehensive maintenance services to enhance ship reliability and minimize downtime.</p> -->
                             
-                            <a class="fw-medium text-primary" href="/service-provision.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                            <a class="fw-medium text-primary" href="service-provision.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                             <h4 class="mb-3">MEDICAL SUPPLY</h4>
                             <!-- <p>Our specialized team sources and delivers top-quality ship equipment to meet your 
                                 vessel's specific needs, ensuring smooth operation and safety.</p> -->
-                            <a class="fw-medium text-primary" href="/service-medical.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                            <a class="fw-medium text-primary" href="service-medical.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                             <h4 class="mb-3">BONDED STORE</h4>
                             <!-- <p>In Walcott, WESTERN AUSTRALIA, we provide a diverse range of ship supplies,
                                  ensuring high-quality provisions and essential items for efficient vessel operations.</p>  -->
-                            <a class="fw-medium text-primary" href="/service-store.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                            <a class="fw-medium text-primary" href="service-store.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -196,15 +196,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="/service-provision.html">Provisions</a>
-                    <a class="btn btn-link" href="/service-medical.html">Medical Supply</a>
-                    <a class="btn btn-link" href="/service-store.html">Bonded Store</a>
+                    <a class="btn btn-link" href="service-provision.html">Provisions</a>
+                    <a class="btn btn-link" href="service-medical.html">Medical Supply</a>
+                    <a class="btn btn-link" href="service-store.html">Bonded Store</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="/about.html">About Us</a>
-                    <a class="btn btn-link" href="/contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="/service.html">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <!-- <a class="btn btn-link" href="">Terms & Condition</a> -->
                     <!-- <a class="btn btn-link" href="">Support</a> -->
                 </div>
