--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 container">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="">
+            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="Logo">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -102,7 +102,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                     <li class="breadcrumb-item text-white active" aria-current="page">About</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="./service.html">Services</a></li>
+                    <!-- <li class="breadcrumb-item"><a class="text-white" href="./service.html">Services</a></li> -->
                 </ol>
             </nav>
         </div>
@@ -163,7 +163,7 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/aboutus.jpeg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/aboutus.jpeg" style="object-fit: cover;" alt="About us">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
