--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 container">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="">
+            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="Logo">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -121,7 +121,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/blog.webp" alt="">
+                            <img class="img-fluid w-100" src="img/blog.webp" alt="Blog Maritime Operations">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog.webp" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-outline-light mx-1" href="blog-operations.html"><i class="fa fa-link"></i></a>
@@ -136,7 +136,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.3s">
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/blog2.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/blog2.jpg" alt="Blog Navigation Guide">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-outline-light mx-1" href="blog-guide.html"><i class="fa fa-link"></i></a>
@@ -151,7 +151,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.5s">
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/blog.webp" alt="">
+                            <img class="img-fluid w-100" src="img/blog.webp" alt="Blog Medical Supply">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/blog.webp" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-outline-light mx-1" href="blog-medical.html"><i class="fa fa-link"></i></a>
