--- a/service-medical.html
+++ b/service-medical.html
@@ -113,12 +113,12 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="section-title text-center">
-                <h1 class="display-5 mb-5">Our Services</h1>
+                <h1 class="display-5 mb-5">Medical Supply</h1>
             </div>
             <div  class="mb-5">
-                <img class="w-100" style="height: 50em;" src="./img/equipment.png" alt="">
+                <img class="w-100" style="height: 50em;" src="./img/equipment.png" alt="Medical Supply">
             </div>
-            <h2 class="mb-3">Medical Supply</h2>
+            <!-- <h2 class="mb-3"></h2> -->
 
             <p class="mb-4 pb-2 " style="text-align: justify;">
                 In the realm of ship chandelling, we acknowledge the paramount significance of dependable medical supplies in safeguarding the health and safety of ship crews. We are wholeheartedly committed to delivering high-quality medical provisions and holistic solutions customized to meet the specific demands of the maritime field.
