--- a/service-provision.html
+++ b/service-provision.html
@@ -113,12 +113,12 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="section-title text-center">
-                <h1 class="display-5 mb-5">Our Services</h1>
+                <h1 class="display-5 mb-5">PROVISIONS</h1>
             </div>
             <div  class="mb-5">
-                <img class="w-100" style="height: 50em;" src="./img/provisions.jpg" alt="">
+                <img class="w-100" style="height: 50em;" src="./img/provisions.jpg" alt="Provisions">
             </div>
-            <h2 class="mb-3">PROVISIONS</h2>
+            <!-- <h2 class="mb-3">PROVISIONS</h2> -->
 
             <p class="mb-4 pb-2 " style="text-align: justify;">
              In the world of ship chandlers, we recognize the critical importance of reliable provisions in ensuring the success of maritime operations. That's why we take great pride in providing exceptional provision services tailored to the distinct requirements of ship owners and crews.
