--- a/service-store.html
+++ b/service-store.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 container">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="">
+            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="Logo">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -113,12 +113,12 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="section-title text-center">
-                <h1 class="display-5 mb-5">Our Services</h1>
+                <h1 class="display-5 mb-5">BONDED STORE</h1>
             </div>
             <div  class="mb-5">
-                <img class="w-100" style="height: 50em;" src="./img/servicestore.jpg" alt="">
+                <img class="w-100" style="height: 50em;" src="./img/servicestore.jpg" alt=" Bonded Store">
             </div>
-            <h2 class="mb-3">BONDED STORE</h2>
+            <!-- <h2 class="mb-3"></h2> -->
 
             <p class="mb-4 pb-2 " style="text-align: justify;">
                 In the world of ship chandelling, we take great pride in presenting an extraordinary array of bonded store provisions designed to enhance the onboard experience for ship crews. Our unwavering commitment to excellence and meticulous attention to detail render us the preferred choice for all your bonded store necessities.
