--- a/service.html
+++ b/service.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 container">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="">
+            <img class="nav-logo" src="./img/shipchandlerportwalcott.png" alt="Logo">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -101,7 +101,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="about.html">about</a></li>
+                    <!-- <li class="breadcrumb-item"><a class="text-white" href="about.html">about</a></li> -->
                     <li class="breadcrumb-item text-white active" aria-current="page">Service</li>
                 </ol>
             </nav>
@@ -130,7 +130,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="overflow-hidden ">
-                            <img class="img-fluid service-img" src="img/maintenance.jpg" alt="">
+                            <img class="img-fluid service-img" src="img/maintenance.jpg" alt="Provions card">
                         </div>
                         <div class="p-4 text-center border border-5 border-light border-top-0">
                             <h4 class="mb-3">PROVISIONS</h4>
@@ -143,7 +143,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid service-img" src="img/equipment.png" alt="">
+                            <img class="img-fluid service-img" src="img/equipment.png" alt="Medical supply card">
                         </div>
                         <div class="p-4 text-center border border-5 border-light border-top-0">
                             <h4 class="mb-3">MEDICAL SUPPLY</h4>
@@ -156,7 +156,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid service-img" src="img/supplies.jpg" alt="">
+                            <img class="img-fluid service-img" src="img/supplies.jpg" alt="Bonded Store">
                         </div>
                         <div class="p-4 text-center border border-5 border-light border-top-0">
                             <h4 class="mb-3">BONDED STORE</h4>
